Sửa lại nhân viên và một chút thứ khác